--- a/01-intro/rag-intro.ipynb
+++ b/01-intro/rag-intro.ipynb
@@ -2,18 +2,417 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "07ac6262-4f50-46d4-94b7-61fd82d3b89f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/workspaces/llm-workshop/01-intro/minsearch.py:9: UserWarning: Now minsearch is installable via pip: 'pip install minsearch'. Remove the downloaded file and re-install it with pip.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import minsearch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8294f310-eaaa-4033-becf-c967a6616fbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61204996-ace0-4c31-8c03-2d2132944aac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Bad pipe message: %s [b'0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7\\r\\nHost: localhost:41625\\r\\nUs', b'-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/133.']\n",
+      "Bad pipe message: %s [b'0.0 Safari/537.36 OPR/118.0.0.0\\r\\nAccept-Encodin']\n",
+      "Bad pipe message: %s [b' gzip, deflate, br, zstd\\r\\nAccept-Language: pl-PL,pl;q=0.9,en-US;q=0.8,en;q=0.7\\r\\nCache-Control: max-age']\n",
+      "Bad pipe message: %s [b'\\r\\nReferer: https://shiny-goggles-xrwpp4pxx97cv4j5.github.dev']\n",
+      "Bad pipe message: %s [b'\\nX-Request-ID: de87eba384c6f2e642485e51c4589d2', b'\\nX-Real-IP: 83.168.77.30\\r\\nX-Forwarded-Port: 443', b'X-Forwarded-']\n",
+      "Bad pipe message: %s [b'heme: https\\r\\nX-Original-URI: /\\r\\nX-Scheme: https\\r\\nsec-fetch-site: same-site\\r\\nsec-fe', b'h-mode: navigate\\r\\nsec-fetch-dest: document\\r\\nsec-ch-ua: \"Not(A:Brand\";v=\"99\", \"Opera\";v=\"118\", \"Chromium\";v=\"133\"\\r\\ns', b'-ch-ua-mobile: ?0\\r\\nsec-ch-ua-platform: \"Windows\"\\r\\npriority: u=0, i\\r\\nX-Original-Proto: https\\r\\nX-Forwa', b'ed-Proto: https\\r\\nX-Forwarded-Host: shiny-goggles-xrwpp4pxx97cv4j5-41625.app.github.dev\\r\\nX-Forwarded-For: 83.168.7']\n",
+      "Bad pipe message: %s [b'0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7\\r\\nHost: localhost:41625\\r\\nUs', b'-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/133.']\n",
+      "Bad pipe message: %s [b'0.0 Safari/537.36 OPR/118.0.0.0\\r\\nAccept-Encodin']\n",
+      "Bad pipe message: %s [b' gzip, deflate, br, zstd\\r\\nAccept-Language: pl-PL,pl;q=0.9,en-US;q=0.8,en;q=0.7\\r\\nX-Request-ID: e8e346fb']\n",
+      "Bad pipe message: %s [b'0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7\\r\\nHost: localhost:41625\\r\\nUs', b'-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/133.']\n",
+      "Bad pipe message: %s [b'0.0 Safari/537.36 OPR/118.0.0.0\\r\\nAccept-Encodin']\n",
+      "Bad pipe message: %s [b' gzip, deflate, br, zstd\\r\\nAccept-Language: pl-PL,pl;q=0.9,en-US;q=0.8,en;q=0.7\\r\\nReferer: https://shiny']\n",
+      "Bad pipe message: %s [b'oggles-xrwpp4pxx97cv4j5.github.dev/\\r\\nX-Reque', b'-ID: 871d95208628392a2da22d39a82903f3\\r\\nX-Real-IP: 83.168.77.30\\r\\nX-Forwarded-Port: 443\\r\\nX-Forwarded-Scheme: https\\r\\n']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#!wget https://raw.githubusercontent.com/alexeygrigorev/minsearch/main/minsearch.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d5b51b22-5f59-461c-8e67-a34045841605",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('documents.json', 'rt') as f_in:\n",
+    "    docs_raw = json.load(f_in)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "90027c12-5635-4af1-ab6c-6e2a9ca2d260",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "documents = []\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "006e6a8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for course_dict in docs_raw:\n",
+    "    for doc in course_dict['documents']:\n",
+    "        doc['course'] = course_dict['course']\n",
+    "        documents.append(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5280f3a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(docs_raw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5f41dc63",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'text': \"The purpose of this document is to capture frequently asked technical questions\\nThe exact day and hour of the course will be 15th Jan 2024 at 17h00. The course will start with the first  “Office Hours'' live.1\\nSubscribe to course public Google Calendar (it works from Desktop only).\\nRegister before the course starts using this link.\\nJoin the course Telegram channel with announcements.\\nDon’t forget to register in DataTalks.Club's Slack and join the channel.\",\n",
+       " 'section': 'General course-related questions',\n",
+       " 'question': 'Course - When will the course start?',\n",
+       " 'course': 'data-engineering-zoomcamp'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "documents[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "830b167f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index = minsearch.Index(\n",
+    "    text_fields=[\"question\", \"text\", \"section\"],\n",
+    "    keyword_fields=[\"course\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "44fee48d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#keywords = SELECT * WHERE course = 'data-engineering-zoomcamp';\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ad399dcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q = 'the course has already started, can I still enroll?'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "c922549e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<minsearch.Index at 0x7448399b8e30>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index.fit(documents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8ca6dd39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openai import OpenAI\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "8d82e5c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OPENAI_API_KEY=\"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\"\n",
+    "client = OpenAI(api_key=OPENAI_API_KEY)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "7460937e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = client.chat.completions.create(\n",
+    "    model='gpt-4o-mini',\n",
+    "    messages=[{\"role\": \"user\", \"content\": q}]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "3543929b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatCompletion(id='chatcmpl-Bgq4jqfomf803vYrrrfYmlvhuYoxd', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content=\"It depends on the specific course and institution's policies. Some courses may allow late enrollment, while others may not. I recommend checking with the course provider or institution directly for their enrollment guidelines and to see if there are any options available for joining the course after it has started.\", refusal=None, role='assistant', annotations=[], audio=None, function_call=None, tool_calls=None))], created=1749549653, model='gpt-4o-mini-2024-07-18', object='chat.completion', service_tier='default', system_fingerprint='fp_34a54ae93c', usage=CompletionUsage(completion_tokens=55, prompt_tokens=18, total_tokens=73, completion_tokens_details=CompletionTokensDetails(accepted_prediction_tokens=0, audio_tokens=0, reasoning_tokens=0, rejected_prediction_tokens=0), prompt_tokens_details=PromptTokensDetails(audio_tokens=0, cached_tokens=0)))"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "e0710881",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def search(query):\n",
+    "    boost = {'question': 3.0, 'section': 0.5}\n",
+    "\n",
+    "    results = index.search(\n",
+    "        query=query,\n",
+    "        filter_dict={'course': 'data-engineering-zoomcamp'},\n",
+    "        boost_dict=boost,\n",
+    "        num_results=5\n",
+    "    )\n",
+    "\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b176fbf5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'text': \"Yes, even if you don't register, you're still eligible to submit the homeworks.\\nBe aware, however, that there will be deadlines for turning in the final projects. So don't leave everything for the last minute.\",\n",
+       "  'section': 'General course-related questions',\n",
+       "  'question': 'Course - Can I still join the course after the start date?',\n",
+       "  'course': 'data-engineering-zoomcamp'},\n",
+       " {'text': 'Yes, we will keep all the materials after the course finishes, so you can follow the course at your own pace after it finishes.\\nYou can also continue looking at the homeworks and continue preparing for the next cohort. I guess you can also start working on your final capstone project.',\n",
+       "  'section': 'General course-related questions',\n",
+       "  'question': 'Course - Can I follow the course after it finishes?',\n",
+       "  'course': 'data-engineering-zoomcamp'},\n",
+       " {'text': \"The purpose of this document is to capture frequently asked technical questions\\nThe exact day and hour of the course will be 15th Jan 2024 at 17h00. The course will start with the first  “Office Hours'' live.1\\nSubscribe to course public Google Calendar (it works from Desktop only).\\nRegister before the course starts using this link.\\nJoin the course Telegram channel with announcements.\\nDon’t forget to register in DataTalks.Club's Slack and join the channel.\",\n",
+       "  'section': 'General course-related questions',\n",
+       "  'question': 'Course - When will the course start?',\n",
+       "  'course': 'data-engineering-zoomcamp'},\n",
+       " {'text': 'You can start by installing and setting up all the dependencies and requirements:\\nGoogle cloud account\\nGoogle Cloud SDK\\nPython 3 (installed with Anaconda)\\nTerraform\\nGit\\nLook over the prerequisites and syllabus to see if you are comfortable with these subjects.',\n",
+       "  'section': 'General course-related questions',\n",
+       "  'question': 'Course - What can I do before the course starts?',\n",
+       "  'course': 'data-engineering-zoomcamp'},\n",
+       " {'text': 'Yes, the slack channel remains open and you can ask questions there. But always sDocker containers exit code w search the channel first and second, check the FAQ (this document), most likely all your questions are already answered here.\\nYou can also tag the bot @ZoomcampQABot to help you conduct the search, but don’t rely on its answers 100%, it is pretty good though.',\n",
+       "  'section': 'General course-related questions',\n",
+       "  'question': 'Course - Can I get support if I take the course in the self-paced mode?',\n",
+       "  'course': 'data-engineering-zoomcamp'}]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "b7f92275",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_prompt(query, search_results):\n",
+    "    prompt_template = \"\"\"\n",
+    "You're a course teaching assistant. Answer the QUESTION based on the CONTEXT from the FAQ database.\n",
+    "Use only the facts from the CONTEXT when answering the QUESTION.\n",
+    "\n",
+    "QUESTION: {question}\n",
+    "\n",
+    "CONTEXT: \n",
+    "{context}\n",
+    "\"\"\".strip()\n",
+    "\n",
+    "    context = \"\"\n",
+    "    \n",
+    "    for doc in search_results:\n",
+    "        context = context + f\"section: {doc['section']}\\nquestion: {doc['question']}\\nanswer: {doc['text']}\\n\\n\"\n",
+    "    \n",
+    "    prompt = prompt_template.format(question=query, context=context).strip()\n",
+    "    return prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "31faadc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def llm(prompt):\n",
+    "    response = client.chat.completions.create(\n",
+    "        model='gpt-4o-mini',\n",
+    "        messages=[{\"role\": \"user\", \"content\": prompt}]\n",
+    "    )\n",
+    "    \n",
+    "    return response.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "2ee0a773",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = 'how do I run kafka?'\n",
+    "\n",
+    "def rag(query):\n",
+    "    search_results = search(query)\n",
+    "    prompt = build_prompt(query, search_results)\n",
+    "    answer = llm(prompt)\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "38e1c7e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'To run Kafka components such as producers or consumers in Java, navigate to your project directory and execute the following command in the terminal:\\n\\n```\\njava -cp build/libs/<jar_name>-1.0-SNAPSHOT.jar:out src/main/java/org/example/JsonProducer.java\\n```\\n\\nMake sure to replace `<jar_name>` with the actual name of your JAR file.'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rag(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "f860537d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Yes, you can still enroll in the course even after it has started. You are eligible to submit the homework, but keep in mind that there will be deadlines for turning in the final projects, so it's important not to leave everything to the last minute.\""
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rag('the course has already started, can I still enroll?')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3692b4c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -21,7 +420,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
