zoomcamp 1.3 retrieval and search

--- a/01-intro/rag-intro.ipynb
+++ b/01-intro/rag-intro.ipynb
@@ -205,12 +205,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "id": "8d82e5c8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "OPENAI_API_KEY=\"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\"\n",
+    "OPENAI_API_KEY=\"\"\n",
     "client = OpenAI(api_key=OPENAI_API_KEY)\n"
    ]
   },
