--- a/01-intro/rag-intro.ipynb
+++ b/01-intro/rag-intro.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "5280f3a1",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
        "3"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "5f41dc63",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
        " 'course': 'data-engineering-zoomcamp'}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "830b167f",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "44fee48d",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "ad399dcc",
    "metadata": {},
    "outputs": [],
@@ -174,17 +174,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "c922549e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<minsearch.Index at 0x7448399b8e30>"
+       "<minsearch.Index at 0x71ad3edaca70>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "8ca6dd39",
    "metadata": {},
    "outputs": [],
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 50,
    "id": "8d82e5c8",
    "metadata": {},
    "outputs": [],
@@ -236,7 +236,7 @@
     {
      "data": {
       "text/plain": [
-       "ChatCompletion(id='chatcmpl-Bgq4jqfomf803vYrrrfYmlvhuYoxd', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content=\"It depends on the specific course and institution's policies. Some courses may allow late enrollment, while others may not. I recommend checking with the course provider or institution directly for their enrollment guidelines and to see if there are any options available for joining the course after it has started.\", refusal=None, role='assistant', annotations=[], audio=None, function_call=None, tool_calls=None))], created=1749549653, model='gpt-4o-mini-2024-07-18', object='chat.completion', service_tier='default', system_fingerprint='fp_34a54ae93c', usage=CompletionUsage(completion_tokens=55, prompt_tokens=18, total_tokens=73, completion_tokens_details=CompletionTokensDetails(accepted_prediction_tokens=0, audio_tokens=0, reasoning_tokens=0, rejected_prediction_tokens=0), prompt_tokens_details=PromptTokensDetails(audio_tokens=0, cached_tokens=0)))"
+       "ChatCompletion(id='chatcmpl-BhAZO4u70Q1VdqHIVoIZMT8mAAolb', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content=\"Whether you can still enroll in a course that has already started depends on the specific policies of the institution or program offering the course. Here are a few steps you can take:\\n\\n1. **Check the Enrollment Policy**: Look for information about late enrollment on the program's website or course catalog.\\n  \\n2. **Contact the Instructor or Administrator**: Reach out directly to the course instructor or the program coordinator to inquire if there is still a possibility to enroll.\\n\\n3. **Consider Auditing**: Some programs allow students to audit courses after they have started, which means you can attend without earning credit.\\n\\n4. **Look for Similar Courses**: If enrollment is closed, consider looking for other courses that may have similar content and are still open for enrollment.\\n\\n5. **Understand the Implications**: If you are allowed to enroll late, be prepared to catch up on any material or assignments you missed.\\n\\nEach institution and course may have different rules, so it’s best to get in touch with the relevant personnel for the most accurate information.\", refusal=None, role='assistant', annotations=[], audio=None, function_call=None, tool_calls=None))], created=1749628434, model='gpt-4o-mini-2024-07-18', object='chat.completion', service_tier='default', system_fingerprint='fp_34a54ae93c', usage=CompletionUsage(completion_tokens=209, prompt_tokens=18, total_tokens=227, completion_tokens_details=CompletionTokensDetails(accepted_prediction_tokens=0, audio_tokens=0, reasoning_tokens=0, rejected_prediction_tokens=0), prompt_tokens_details=PromptTokensDetails(audio_tokens=0, cached_tokens=0)))"
       ]
      },
      "execution_count": 29,
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "id": "b7f92275",
    "metadata": {},
    "outputs": [],
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "id": "31faadc1",
    "metadata": {},
    "outputs": [],
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "2ee0a773",
    "metadata": {},
    "outputs": [],
@@ -369,17 +369,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "id": "38e1c7e4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'To run Kafka components such as producers or consumers in Java, navigate to your project directory and execute the following command in the terminal:\\n\\n```\\njava -cp build/libs/<jar_name>-1.0-SNAPSHOT.jar:out src/main/java/org/example/JsonProducer.java\\n```\\n\\nMake sure to replace `<jar_name>` with the actual name of your JAR file.'"
+       "'To run Kafka, you can execute the following command in the terminal within your project directory:\\n\\n```\\njava -cp build/libs/<jar_name>-1.0-SNAPSHOT.jar:out src/main/java/org/example/JsonProducer.java\\n```\\n\\nMake sure to replace `<jar_name>` with the actual name of your jar file.'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,17 +390,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "id": "f860537d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Yes, you can still enroll in the course even after it has started. You are eligible to submit the homework, but keep in mind that there will be deadlines for turning in the final projects, so it's important not to leave everything to the last minute.\""
+       "\"Yes, you can still enroll in the course after it has started. Even if you don't register, you're eligible to submit the homework. However, keep in mind that there are deadlines for turning in the final projects, so it's important not to leave everything to the last minute.\""
       ]
      },
-     "execution_count": 39,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,9 +410,240 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a7439dc9",
+   "metadata": {},
+   "source": [
+    "## Elastic search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "ae18adcb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from elasticsearch import Elasticsearch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "fe90fe3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "es_client = Elasticsearch('http://localhost:9200') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "21b7589e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'name': 'c0d475b78e7e', 'cluster_name': 'docker-cluster', 'cluster_uuid': 'j0kfnCfIRE2xK1FzMkRa9A', 'version': {'number': '8.4.3', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '42f05b9372a9a4a470db3b52817899b99a76ee73', 'build_date': '2022-10-04T07:17:24.662462378Z', 'build_snapshot': False, 'lucene_version': '9.3.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'})"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "es_client.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "f3d1a01b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'course-questions'})"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index_settings = {\n",
+    "    \"settings\": {\n",
+    "        \"number_of_shards\": 1,\n",
+    "        \"number_of_replicas\": 0\n",
+    "    },\n",
+    "    \"mappings\": {\n",
+    "        \"properties\": {\n",
+    "            \"text\": {\"type\": \"text\"},\n",
+    "            \"section\": {\"type\": \"text\"},\n",
+    "            \"question\": {\"type\": \"text\"},\n",
+    "            \"course\": {\"type\": \"keyword\"} \n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "index_name = \"course-questions\"\n",
+    "\n",
+    "es_client.indices.create(index=index_name, body=index_settings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "9c895ea0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm.auto import tqdm\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "0670a828",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'text': \"The purpose of this document is to capture frequently asked technical questions\\nThe exact day and hour of the course will be 15th Jan 2024 at 17h00. The course will start with the first  “Office Hours'' live.1\\nSubscribe to course public Google Calendar (it works from Desktop only).\\nRegister before the course starts using this link.\\nJoin the course Telegram channel with announcements.\\nDon’t forget to register in DataTalks.Club's Slack and join the channel.\",\n",
+       " 'section': 'General course-related questions',\n",
+       " 'question': 'Course - When will the course start?',\n",
+       " 'course': 'data-engineering-zoomcamp'}"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "documents[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "7ccac099",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d87f9ba96b35492880dead131de84fcd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/948 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "for doc in tqdm(documents):\n",
+    "    es_client.index(index=index_name, document=doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "006fdf3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = 'I just disovered the course. Can I still join it?'\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3692b4c",
+   "id": "9f4d0a23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#question is 3 times more important\n",
+    "def elastic_search(query):\n",
+    "    search_query = {\n",
+    "        \"size\": 5,\n",
+    "        \"query\": {\n",
+    "            \"bool\": {\n",
+    "                \"must\": {\n",
+    "                    \"multi_match\": {\n",
+    "                        \"query\": query,\n",
+    "                        \"fields\": [\"question^3\", \"text\", \"section\"],\n",
+    "                        \"type\": \"best_fields\"\n",
+    "                    }\n",
+    "                },\n",
+    "                \"filter\": {\n",
+    "                    \"term\": {\n",
+    "                        \"course\": \"data-engineering-zoomcamp\"\n",
+    "                    }\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    response = es_client.search(index=index_name, body=search_query)\n",
+    "    \n",
+    "    result_docs = []\n",
+    "    \n",
+    "    for hit in response['hits']['hits']:\n",
+    "        result_docs.append(hit['_source'])\n",
+    "    \n",
+    "    return result_docs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "66e05b7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rag(query):\n",
+    "    search_results = elastic_search(query)\n",
+    "    prompt = build_prompt(query, search_results)\n",
+    "    answer = llm(prompt)\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "cc2a2ce8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Yes, you can still join the course even after the start date. You are eligible to submit the homeworks without registering. However, be mindful of the deadlines for the final projects, so make sure not to leave everything until the last minute.'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rag(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ae82dee",
    "metadata": {},
    "outputs": [],
    "source": []
