Agents homework update

--- a/cohorts/homework_agents.ipynb
+++ b/cohorts/homework_agents.ipynb
@@ -380,7 +380,8 @@
    "metadata": {},
    "source": [
     "## Q4 ANSWER\n",
-    "stdio"
+    "in terminal: python weather_server.py\n",
+    "answer: stdio"
    ]
   },
   {
@@ -548,6 +549,14 @@
    "source": [
     "Copy the output with the available tools when\n",
     "filling in the homework form."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a759462",
+   "metadata": {},
+   "source": [
+    "## Q6 ANSWER"
    ]
   },
   {
