--- a/cohorts/homework3.ipynb
+++ b/cohorts/homework3.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "8a34c850",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "2e2f884b",
    "metadata": {},
    "outputs": [],
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ad5184a8",
    "metadata": {},
    "outputs": [],
@@ -626,90 +626,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "e5f47f4f",
    "metadata": {},
    "outputs": [],
    "source": [
     "#!pip install fastembed --upgrade"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "1dcbdc6e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from fastembed import TextEmbedding"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "e86c61fb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "   \"model\": \"BAAI/bge-small-zh-v1.5\",\n",
-      "   \"sources\": {\n",
-      "      \"hf\": \"Qdrant/bge-small-zh-v1.5\",\n",
-      "      \"url\": \"https://storage.googleapis.com/qdrant-fastembed/fast-bge-small-zh-v1.5.tar.gz\",\n",
-      "      \"_deprecated_tar_struct\": true\n",
-      "   },\n",
-      "   \"model_file\": \"model_optimized.onnx\",\n",
-      "   \"description\": \"Text embeddings, Unimodal (text), Chinese, 512 input tokens truncation, Prefixes for queries/documents: not so necessary, 2023 year.\",\n",
-      "   \"license\": \"mit\",\n",
-      "   \"size_in_GB\": 0.09,\n",
-      "   \"additional_files\": [],\n",
-      "   \"dim\": 512,\n",
-      "   \"tasks\": {}\n",
-      "}\n",
-      "{\n",
-      "   \"model\": \"Qdrant/clip-ViT-B-32-text\",\n",
-      "   \"sources\": {\n",
-      "      \"hf\": \"Qdrant/clip-ViT-B-32-text\",\n",
-      "      \"url\": null,\n",
-      "      \"_deprecated_tar_struct\": false\n",
-      "   },\n",
-      "   \"model_file\": \"model.onnx\",\n",
-      "   \"description\": \"Text embeddings, Multimodal (text&image), English, 77 input tokens truncation, Prefixes for queries/documents: not necessary, 2021 year\",\n",
-      "   \"license\": \"mit\",\n",
-      "   \"size_in_GB\": 0.25,\n",
-      "   \"additional_files\": [],\n",
-      "   \"dim\": 512,\n",
-      "   \"tasks\": {}\n",
-      "}\n",
-      "{\n",
-      "   \"model\": \"jinaai/jina-embeddings-v2-small-en\",\n",
-      "   \"sources\": {\n",
-      "      \"hf\": \"xenova/jina-embeddings-v2-small-en\",\n",
-      "      \"url\": null,\n",
-      "      \"_deprecated_tar_struct\": false\n",
-      "   },\n",
-      "   \"model_file\": \"onnx/model.onnx\",\n",
-      "   \"description\": \"Text embeddings, Unimodal (text), English, 8192 input tokens truncation, Prefixes for queries/documents: not necessary, 2023 year.\",\n",
-      "   \"license\": \"apache-2.0\",\n",
-      "   \"size_in_GB\": 0.12,\n",
-      "   \"additional_files\": [],\n",
-      "   \"dim\": 512,\n",
-      "   \"tasks\": {}\n",
-      "}\n"
-     ]
-    }
-   ],
-   "source": [
-    "import json\n",
-    "\n",
-    "EMBEDDING_DIMENSIONALITY = 512\n",
-    "\n",
-    "for model in TextEmbedding.list_supported_models():\n",
-    "    if model[\"dim\"] == EMBEDDING_DIMENSIONALITY:\n",
-    "        print(json.dumps(model, indent=3))"
    ]
   },
   {
@@ -758,30 +680,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "9f1d4cd8",
    "metadata": {},
    "outputs": [],
    "source": [
     "points = []\n",
-    "id = 0\n",
     "\n",
-    "\n"
+    "for i, doc in enumerate(documents):\n",
+    "    text = doc['question'] + ' ' + doc['text']\n",
+    "    vector = models.Document(text=text, model=model_handle)\n",
+    "    point = models.PointStruct(\n",
+    "        id=i,\n",
+    "        vector=vector,\n",
+    "        payload=doc\n",
+    "    )\n",
+    "    points.append(point)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "4406adae",
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "53b01dec1e9d40179a83babec1d2469a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fetching 5 files:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "df1a65f0aee44d7982f242e6ef2e2715",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "special_tokens_map.json:   0%|          | 0.00/125 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "42e7aa99cac047f09350428b5d3ccfdb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a779366484ab45138f3675f85dc9e565",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/367 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "999f3af4365c4227ae6eeb4cf3be8dc6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3372442400c64067866e62e0acb9b90b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "onnx/model.onnx:   0%|          | 0.00/130M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/plain": [
        "UpdateResult(operation_id=0, status=<UpdateStatus.COMPLETED: 'completed'>)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +803,17 @@
     "client.upsert(\n",
     "    collection_name=collection_name,\n",
     "    points=points\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cae6482f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "for doc in documents:\n",
     "    text = doc['question'] + ' ' + doc['text']\n",
     "    point = models.PointStruct(\n",
@@ -810,12 +833,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "id": "f2c87b1d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def search(query, limit=5):\n",
+    "def search(query, course, limit=5):\n",
     "\n",
     "    results = client.query_points(\n",
     "        collection_name=collection_name,\n",
@@ -824,22 +847,31 @@
     "            model=model_handle\n",
     "        ),\n",
     "        limit=limit, # top closest matches\n",
-    "        with_payload=True #to get metadata in the results\n",
+    "        with_payload=True, #to get metadata in the results,\n",
+    "        query_filter=models.Filter( \n",
+    "            must=[\n",
+    "                models.FieldCondition(\n",
+    "                    key=\"course\",\n",
+    "                    match=models.MatchValue(value=course)\n",
+    "                )\n",
+    "            ]\n",
+    "        ),\n",
     "    )\n",
     "\n",
-    "    return results"
+    "    \n",
+    "    return results\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "id": "e65ba7fa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf701686f33f4829892496bd5292b911",
+       "model_id": "c6c3eca093384596b3729caaf7e5c2ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -855,9 +887,12 @@
     "q4_relevance_total = []\n",
     "\n",
     "for q in tqdm(ground_truth):\n",
+    "\n",
     "    doc_id = q['document']\n",
-    "    results = search(query=q['question'])\n",
-    "    relevance = [d.payload[\"doc_id\"] == doc_id for d in results.points]\n",
+    "    query = q['question']\n",
+    "    course = q['course']\n",
+    "    results = search(query, course)\n",
+    "    relevance = [d.payload[\"id\"] == doc_id for d in results.points]\n",
     "    q4_relevance_total.append(relevance)"
    ]
   },
@@ -869,26 +904,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "54999669",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mrr(q4_relevance_total)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8246091780131126"
+       "0.8517722066133576"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
